// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-ezOQGI kgyzsy"
  >
    <div
      class="sc-bYMpWt jdWWHh"
    >
      <input
        class="sc-jIRcFI bWqaOu"
        type="checkbox"
      />
      <div
        class="sc-kMjNwy bpxqpd"
      />
      <div
        class="sc-ilhmMj ieqlfj"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render 1`] = `
<div>
  <label
    class="sc-ezOQGI kgyzsy"
  >
    <div
      class="sc-bYMpWt jpBeJS"
    >
      <input
        class="sc-jIRcFI bWqaOu"
        type="checkbox"
      />
      <div
        class="sc-kMjNwy fkrtlJ"
      />
      <div
        class="sc-ilhmMj izIeci"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-ezOQGI dxWDVV"
    disabled=""
  >
    <div
      class="sc-bYMpWt jpBeJS"
    >
      <input
        class="sc-jIRcFI bWqaOu"
        disabled=""
        type="checkbox"
      />
      <div
        class="sc-kMjNwy hTSHB"
        disabled=""
      />
      <div
        class="sc-ilhmMj cbHLdd"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
